--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
       run: |
         # Here we'll add our commands to run cobolcheck
         echo "Running COBOL Check"
-        # Add actual cobolcheck commands here
+        chmod +x .github/scripts/mainframe_operations.sh
+        .github/scripts/mainframe_operations.sh
