--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
+---
 name: COBOL Check Automation
-
 on:
   push:
     branches: [ main ]
@@ -11,14 +11,23 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        java-version: '21'
-    - name: Run COBOL Check
-      env:
-        ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
-        ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
+        distribution: 'zulu'
+        java-version: '11'
+    - name: Install Zowe CLI
       run: |
-        # Here we'll add our commands to run cobolcheck
-        echo "Running COBOL Check"
+        npm install -g @zowe/cli
+        zowe --version
+    - name: Run COBOL Check on Mainframe
+      env:
+        ZOWE_OPT_REJECT_UNAUTHORIZED: false
+        HOST: ${{ secrets.ZOWE_HOST }}
+        USER: ${{ secrets.ZOWE_USERNAME }}
+        PSW: ${{ secrets.ZOWE_PASSWORD }}
+        PORT: ${{ secrets.ZOWE_PORT }}
+      run: |
+        chmod +x .github/scripts/zowe_operations.sh
+        .github/scripts/zowe_operations.sh
         chmod +x .github/scripts/mainframe_operations.sh
-        .github/scripts/mainframe_operations.sh
-        
+        # command below was changed from the original yaml file
+        sshpass -p "$PSW" ssh -o StrictHostKeyChecking=no "$USER"@"$HOST" 'sh -s' < .github/scripts/mainframe_operations.sh
+...
