--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,42 @@
 ---
 name: COBOL Check Automation
+
 on:
   push:
     branches: [ main ]
+
 jobs:
   cobol-check:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        distribution: 'zulu'
         java-version: '11'
+        distribution: 'adopt'
+        
     - name: Install Zowe CLI
-      run: |
-        npm install -g @zowe/cli
-        zowe --version
-    - name: Run COBOL Check on Mainframe
+      run: npm install -g @zowe/cli@latest
+      
+    - name: Setup Mainframe Environment and Upload COBOL Check
       env:
-        ZOWE_OPT_REJECT_UNAUTHORIZED: false
-        HOST: ${{ secrets.ZOWE_HOST }}
-        USER: ${{ secrets.ZOWE_USERNAME }}
-        PSW: ${{ secrets.ZOWE_PASSWORD }}
-        PORT: ${{ secrets.ZOWE_PORT }}
+        ZOWE_HOST: ${{ secrets.ZOWE_HOST }}
+        ZOWE_PORT: ${{ secrets.ZOWE_PORT }}
+        ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
+        ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
+        ZOWE_OPT_REJECT_UNAUTHORIZED: false 
+        
       run: |
         chmod +x .github/scripts/zowe_operations.sh
         .github/scripts/zowe_operations.sh
-        chmod +x .github/scripts/mainframe_operations.sh
-        # command below was changed from the original yaml file
-        sshpass -p "$PSW" ssh -o StrictHostKeyChecking=no "$USER"@"$HOST" 'sh -s' < .github/scripts/mainframe_operations.sh
+
+    - name: Run COBOL Check on Mainframe
+      env:
+        ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
+        ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
+      run: |
+        sshpass -p "$ZOWE_PASSWORD" ssh -o StrictHostKeyChecking=no $ZOWE_USERNAME@204.90.115.200 'sh -s' < .github/scripts/mainframe_operations.sh
 ...
